--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <header></header>
+    <main>
+      <h1>To Do App</h1>
+      <input class="user-input" type="text" />
+      <button class="add-btn">Add</button>
+      <ul class="list-container"></ul>
+    </main>
+    <footer></footer>
     <script src="./js/script.js"></script>
   </body>
 </html>
