--- a/index.html
+++ b/index.html
@@ -5,17 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do App</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/media.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="icon-box">
+        <i class="ri-sun-line"></i>
+      </div>
+      <!-- <i class="ri-sun-fill"></i> -->
+      <h2>To Do App</h2>
+    </header>
     <main>
-      <h1>To Do App</h1>
+      <div class="input-container">
+        <input type="text" id="user-input" placeholder="Write your Task" />
+
+        <i class="ri-add-line"></i>
+      </div>
+      <ul class="user-list">
+        <!-- <h4>tasks: <span>5</span></h4> -->
+        <div class="list-box">
+          <div class="left-content">
+            <input type="checkbox" name="" id="check" />
+            <li>Lorem ipsum, dolor sit amet consectetur</li>
+          </div>
+          <div class="right-content">
+            <i class="ri-save-fill"></i>
+            <i class="ri-pencil-fill"></i>
+            <i class="ri-delete-bin-7-fill"></i>
+          </div>
+        </div>
+        <div class="list-box">
+          <div class="left-content">
+            <input type="checkbox" name="" id="check" />
+            <li>Lorem ipsum, dolor sit amet consectetur</li>
+          </div>
+          <div class="right-content">
+            <i class="ri-save-fill"></i>
+            <i class="ri-pencil-fill"></i>
+            <i class="ri-delete-bin-7-fill"></i>
+          </div>
+        </div>
+        <div class="list-box">
+          <div class="left-content">
+            <input type="checkbox" name="" id="check" />
+            <li>Lorem ipsum, dolor sit amet consectetur</li>
+          </div>
+          <div class="right-content">
+            <i class="ri-save-fill"></i>
+            <i class="ri-pencil-fill"></i>
+            <i class="ri-delete-bin-7-fill"></i>
+          </div>
+        </div>
+        <div class="list-box">
+          <div class="left-content">
+            <input type="checkbox" name="" id="check" />
+            <li>Lorem ipsum, dolor sit amet consectetur</li>
+          </div>
+          <div class="right-content">
+            <i class="ri-save-fill"></i>
+            <i class="ri-pencil-fill"></i>
+            <i class="ri-delete-bin-7-fill"></i>
+          </div>
+        </div>
+        <div class="list-box">
+          <div class="left-content">
+            <input type="checkbox" name="" id="check" />
+            <li>Lorem ipsum, dolor sit amet consectetur</li>
+          </div>
+          <div class="right-content">
+            <i class="ri-save-fill"></i>
+            <i class="ri-pencil-fill"></i>
+            <i class="ri-delete-bin-7-fill"></i>
+          </div>
+        </div>
+      </ul>
+      <!-- <h1>To Do App</h1>
       <input class="user-input" type="text" />
       <button class="add-btn">Add</button>
-      <ul class="list-container"></ul>
+      <ul class="list-container"></ul> -->
     </main>
     <footer></footer>
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/script.js"></script> -->
   </body>
 </html>
