apply major changes for the js file

--- a/index.html
+++ b/index.html
@@ -27,20 +27,19 @@
       <h2>To Do App</h2>
     </header>
     <main>
-      <div class="input-container">
+      <section class="input-container">
         <input type="text" id="user-input" placeholder="Write your Task" />
 
-        <i class="ri-add-line"></i>
-      </div>
+        <i class="ri-add-line add-btn"></i>
+      </section>
       <ul class="user-list">
-        <!-- <h4>tasks: <span>5</span></h4> -->
-        <div class="list-box">
+        <!-- <div class="list-box">
           <div class="left-content">
             <input type="checkbox" name="" id="check" />
             <li>Lorem ipsum, dolor sit amet consectetur</li>
           </div>
           <div class="right-content">
-            <i class="ri-save-fill"></i>
+            <i class="ri-save-fill" save-btn></i>
             <i class="ri-pencil-fill"></i>
             <i class="ri-delete-bin-7-fill"></i>
           </div>
@@ -88,14 +87,9 @@
             <i class="ri-pencil-fill"></i>
             <i class="ri-delete-bin-7-fill"></i>
           </div>
-        </div>
+        </div> -->
       </ul>
-      <!-- <h1>To Do App</h1>
-      <input class="user-input" type="text" />
-      <button class="add-btn">Add</button>
-      <ul class="list-container"></ul> -->
     </main>
-    <footer></footer>
-    <!-- <script src="./js/script.js"></script> -->
+    <script src="./js/script.js"></script>
   </body>
 </html>
